# quarry

./: .env.example  .gitignore  README.md  mkdocs.yml  requirements-docs.txt  spec.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  model_compatibility.md
.github/workflows/: ci.yml
crawler/: go.mod  go.sum
crawler/cmd/crawler/: main.go
crawler/internal/config/: config.go
crawler/internal/crawler/: crawler.go  pool.go
crawler/internal/dedup/: dedup.go
crawler/internal/extractor/: extractor.go
crawler/internal/index/: builder.go
crawler/internal/robots/: robots.go
crawler/tests/: crawler_test.go  extractor_test.go  index_test.go  robots_test.go
docs/: architecture.md  contributing.md  crawler.md  index.md  installation.md  model-export.md  performance.md  roadmap.md  semantic-search.md  testing.md
docs/stylesheets/: extra.css
semantic-search/: Cargo.toml  config.toml
semantic-search/crates/embedder/: Cargo.toml
semantic-search/crates/embedder/src/: lib.rs  model.rs  tokenizer.rs  vram.rs
semantic-search/crates/indexer/: Cargo.toml
semantic-search/crates/indexer/src/: document.rs  lib.rs  store.rs
semantic-search/scripts/: download_model.sh  export_onnx.py
semantic-search/tests/: integration_tests.rs
tests/e2e/: pipeline_test.sh
tests/e2e/fixtures/site/: index.html  installation.html  launcher.html  robots.txt  troubleshooting.html
tests/go/: crawler_integration_test.go  crawler_unit_test.go  mock_server_test.go
tests/rust/: embedder_unit_tests.rs  indexer_unit_tests.rs  search_integration_tests.rs
