[workspace]
resolver = "2"
members = [
    "crates/embedder",
    "crates/indexer",
    "bin/indexer",
    "bin/search",
    "bin/api",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.75"
authors = ["Semantic Search Team"]
license = "MIT"

[workspace.dependencies]
# ONNX Runtime
ort = { version = "2.0.0-rc.12", features = ["cuda", "load-dynamic"] }

# Tokenization
tokenizers = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP framework (for API)
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# GPU monitoring
nvml-wrapper = "0.10"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Numerics
ndarray = "0.15"

# Configuration
toml = "0.8"

# Utilities
memmap2 = "0.9"
bincode = "1.3"
sha2 = "0.10"
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }

# Testing
criterion = "0.5"
tempfile = "3.9"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true

[profile.test]
opt-level = 2
