[package]
name = "embedder"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
ort.workspace = true
tokenizers.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
nvml-wrapper.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tokio.workspace = true

[dev-dependencies]
tempfile.workspace = true
